--- a/styles.rem.css
+++ b/styles.rem.css
@@ -149,22 +149,46 @@ img#large-phone {
     margin-top: 2.5rem;
     margin-left: -4rem;
 }
+.large .phone-body{
+    max-width: 17rem;
+}
+.large .phone-screen{
+    max-width: 14.75rem;
+    margin-left: 1.15rem;
+    margin-top: -30.6rem;
+}
 .two-images {
     display: flex;
 }
 .two-images .ft-image{
     width: inherit;
+    max-width: 28rem;
 }
 img#testing-phone1 {
     margin-top: -2.5rem;
+    max-width: 12.8rem;
 }
 img#testing-phone2 {
     margin-top: 2rem;
+}
+.phone-overlay{
+    max-width: 17.8125rem;
+}
+.phone-body{
+    max-width: 12.8rem;
+}
+.phone-screen{
+    position: absolute;
+    max-width: 11.15rem;
+    margin-top: -23.15rem;
+    margin-left: .85rem;
 }
 
 
 .button-static{
 	margin-top: 2.1875rem;
+    display: flex;
+    justify-content: flex-start;
 }
 .button{
 	margin-top: 2.1875rem;
@@ -176,7 +200,7 @@ img#testing-phone2 {
     box-shadow: 0.0rem 0.3125rem 1.5625rem 0.0rem rgba(0,18,66,1);
     height: 2.5rem;
     width: 12.25rem;
-    margin-left: 1.25rem;
+    margin-left: 1rem
 }
 /*.shadow-hack#more{
     width: 8.75rem;
@@ -192,6 +216,7 @@ img#testing-phone2 {
     border-radius: 0.125rem;
     position: absolute;
     margin-top: -.7rem;
+    cursor: default;
 }
 a.button{ 
     background-color: #fff;
@@ -345,7 +370,7 @@ section.featured-projects {
 
 .suthbot {
     width: 100%;
-    padding: 2.875rem 0;
+    padding: 2.875rem 1rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -359,7 +384,7 @@ section.featured-projects {
 
 .dashboard {
     width: 100%;
-    padding: 2.875rem 0;
+    padding: 2.875rem 1rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -378,7 +403,7 @@ section.featured-projects {
 
 .adminportal {
     width: 100%;
-    padding: 2.875rem 0;
+    padding: 2.875rem 1rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -413,6 +438,7 @@ section.other-projects {
     justify-content: center;
     max-width: 58.75rem;
     margin-top: 5rem;
+    padding: 0 1rem;
     /*transform: rotate(-3deg);*/
 }
 .thumbnails {
@@ -574,6 +600,8 @@ a.behance{
     color: #001242;
 }
 
+.inline-image{width: 100%;}
+
 
 
 .case-nav{
@@ -662,6 +690,14 @@ strong#p-title{
     margin-top: 2.5rem;
     justify-content: center;
 }
+.ft-image img {
+    max-width: 48rem;
+    height: auto;
+}
+.laptop-image img{
+    max-width: inherit;
+    min-height: 30rem;
+}
 .caption {
     font-size: .875rem;
     line-height: 1.45;
@@ -676,13 +712,92 @@ img#margin-top{
 }
 
 
-@media screen and (max-width: 956px) {
+
+.laptop-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.screen {
+    position: absolute;
+    width: 76%;
+    margin-top: -1.25rem;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    max-height: 30rem;
+}
+img.laptop{width: 100%;}
+
+.hidden-image{display: none;}
+
+
+
+
+
+
+@media (min-width: 81.25rem) {
+    .bio-content{margin-top: 9.5rem;}
+}
+@media (max-width: 37.5rem){
+    .bio .feature-image{height: 11.75rem; width: 11.75rem; min-height: 11.75rem; min-width: 11.75rem; margin-left: -.5rem;}
+    .bio{height: inherit; padding:0 1rem 5.5rem 1rem;}
+    .bio-content{flex-direction: column; justify-content: center; margin-top: 8.25rem;}
+    .bio-content .content{margin-top: 2rem;}
+    .button-static{margin: 2rem 0;}
+    h1{font-size: 3.25rem !important;}
+    h2{font-size: 3.25rem;}
+    h3{line-height: 3.75rem; font-size: 2.75rem;}
+    h4{font-size: 2rem !important;}
+    h5{line-height: 2.25rem; font-size: 1.5rem}
+    h6{font-size: 1rem;}
+    h7{font-size: .95rem;}
+    #dashboard-header .content, #adminportal-header .content{padding: 5rem 2rem 3rem 2rem !important;}
+    .button-static, .button{margin: 2rem 0; display: flex; justify-content: center;}
+    .shadow-hack{margin-left: 0;}
+    .adminportal .content {text-align: center !important;}
+    .home-feature{width: 90%;}
+    .other-projects-content{margin-top: 5rem; padding: 0 1rem;}
+    .thumbnails {height: 13rem;}
+    .gradient{z-index: 5;}
+    .project-thumbnail{height: 8.5rem; width: 9.125rem; margin-bottom: 1.1875rem; font-size: 1rem;}
+    .project-thumbnail#sametz{background-image: none;}
+    .other-projects div.button{z-index: 10; margin-top: -1.25rem;}
+    section.contact{height: 22rem; background-position-x: right;}
+    .contact .content{margin-top: 3rem; min-width: inherit;}
+    .side-image{display: none;}
+    .hidden-image {display: flex; align-items: center; flex-direction: column; margin-bottom: 1.5rem;}
+    .hidden-image img#logos, img#phone{margin-top: 0;}
+    .two-images .ft-image{width: 90%;}
+    .side-image.large{display: block;}
+    img#large-phone{margin-left: 0;}
+    .adminportal img{max-width: 24rem;}
+    ul.case-nav-content{justify-content: center !important; flex-wrap: wrap !important;}
+    .two-images{display: flex; flex-direction: column; align-items: center;}
+    .large .phone-screen{margin-left: -10.35rem !important; margin-top: 4.5rem !important;}
+    .caption{width: 100%;}
+}
+@media (max-width: 54.25rem) and (min-width:37.5rem){
+    .bio{height: inherit; padding:0 1rem 5.5rem 1rem;}
+    .bio-content{flex-direction: column; justify-content: center; margin-top: 3.25rem;}
+    .bio-content .content{margin-top: 2rem;}
+    .bio .feature-image{height: 13.75rem; width: 13.75rem; min-height: 13.75rem; min-width: 13.75rem; margin-left: -1.5rem;}
+    .button-static, .button{margin: 2rem 0; display: flex; justify-content: center;}
+    .shadow-hack{margin-left: 0;}
+    .featured-projects .content{text-align: center;}
+    .other-projects-content{margin-top: 5rem; padding: 0 1rem;}
+    section.contact{height: 22rem; background-position-x: right;}
+    .contact .content{margin-top: 3rem; min-width: inherit;}
+    h2{font-size: 3.25rem;}
+}
+@media screen and (max-width: 59.75rem) {
     .case-header{padding: 0;}
-    #dashboard-header .content {min-width: inherit; width: 100%; padding: 7rem 2rem 3rem 2rem;}
+    #dashboard-header .content, #adminportal-header .content {min-width: inherit; width: 100%; padding: 7rem 2rem 3rem 2rem;}
     h1{font-size: 5.25rem; line-height: 4.0625rem;}
     h4{font-size: 2.125rem; line-height: 3.625rem;}
     h6{font-size: 1rem; line-height: 1.3125rem;}
-    .case-nav{font-size: 1.15rem; width: 100%;}
+    .case-nav{font-size: 1.15rem; width: 100%; padding-left: 2rem;}
     ul.case-nav-content{width: 100%; justify-content: flex-start; min-width: inherit;}
     .case-study-content{width: 100%; padding: 0 2rem 4.5rem 2rem;}    
     .intro{flex-direction: row; margin-top: 4.625rem; width: 100%;}
@@ -693,8 +808,11 @@ img#margin-top{
     section#revision{flex-direction: column;}
     .ft-image{width: 100%;}
     img{width: inherit;}
-    .two-images .ft-image{width: 80%;}
+    .two-images .ft-image{width: 90%;}
     .two-images .side-image{width: 60%;}
+    .large .phone-body{max-width: 11rem;}
+    .large .phone-screen{max-width: 9.75rem; margin-left: 0.65rem; margin-top: -20.125rem;}
     img#large-phone{width: 80%;}
     .button{margin-bottom: 2rem;}
+    .suthbot, .adminportal, .dashboard{width: auto;}
 }
