--- a/styles.rem.css
+++ b/styles.rem.css
@@ -42,34 +42,39 @@ body{
     font-size: 1.25rem;
 }
 h1{
-	font-family: Gastromond-Regular;
+	font-family: gastromond;
+    font-weight: 400;
 	font-size: 6.25rem;
 	letter-spacing: .15rem;
 	line-height: 4.0625rem;
     margin: 0;
 }
 h2{
-	font-family: Gastromond-Regular;
+	font-family: gastromond;
+    font-weight: 400;
 	font-size: 3.75rem;
 	letter-spacing: .15rem;
     margin: 0;
 }
 h3{
-	font-family: Gastromond-Regular;
+	font-family: gastromond;
+    font-weight: 400;
 	font-size: 3.125rem;
 	letter-spacing: .15rem;
 	line-height: 2.8125rem;
 	margin: 0;
 }
 h4{
-	font-family: ProximaNova-Light;
+	font-family: proxima-nova;
+    font-weight: 300;
 	font-size: 3.125rem;
 	letter-spacing: .03rem;
 	line-height: 4.0625rem;
     margin: 0;
 }
 h5{
-	font-family: ProximaNova-Light;
+	font-family: proxima-nova;
+    font-weight: 300;
 	font-size: 1.875rem;
 	letter-spacing: .03rem;
 	line-height: 2.8125rem;
@@ -77,7 +82,8 @@ h5{
 	margin: 0;	
 }
 h6{
-	font-family: ProximaNova-Bold;
+	font-family: proxima-nova;
+    font-weight: 700;
 	font-size: 1.4375rem;
 	letter-spacing: .15rem;
 	line-height: 3.3125rem;
@@ -85,7 +91,8 @@ h6{
     margin: 0;  
 }
 h7{
-	font-family: ProximaNova-Bold;
+	font-family: proxima-nova;
+    font-weight: 700;
 	font-size: 1rem;
 	letter-spacing: .1rem;
 	line-height: 2.25rem;
@@ -93,7 +100,8 @@ h7{
 	margin-top: 0.3125rem;
 }
 .body-copy{
-	font-family: ProximaNova-Regular;
+	font-family: proxima-nova;
+    font-weight: 400;
 	font-size: 1rem;
 	color: #373F51;
 	letter-spacing: .01rem;
@@ -210,7 +218,8 @@ img#testing-phone2 {
     width: fit-content;
     max-height: 3.125rem;
     padding: 0.9375rem;
-    font-family: ProximaNova-bold;
+    font-family: proxima-nova;
+    font-weight: 700;
     font-size: 1.375rem;
     color: #001242;
     border-radius: 0.125rem;
@@ -223,7 +232,8 @@ a.button{
     width: fit-content;
     max-height: 3.125rem;
     padding: 0.6rem 0.9375rem;
-    font-family: ProximaNova-bold;
+    font-family: proxima-nova;
+    font-weight: 700;
     font-size: 1.375rem;
     color: #001242;
     border-radius: 0.125rem;
@@ -296,7 +306,8 @@ a.button:hover{
 }
 
 .main-nav {
-    font-family: ProximaNova-Extrabld;
+    font-family: proxima-nova;
+    font-weight: 800;
     font-size: 1.0rem;
     letter-spacing: 0.0.375rem;
     text-transform: uppercase;
@@ -470,7 +481,8 @@ section.other-projects {
     margin-bottom: 2.1875rem;
     color: #fff;
     text-transform: uppercase;
-    font-family: ProximaNova-Bold;
+    font-family: proxima-nova;
+    font-weight: 700;
     letter-spacing: 1.5;
     font-size: 1.75rem;
     display: flex;
@@ -530,7 +542,8 @@ h2#contact-header{
     flex-direction: column;
 }
 .contact h7{
-    font-family: ProximaNova-Light;
+    font-family: proxima-nova;
+    font-weight: 300;
     line-height: 1.75;
     margin-top: -2rem;
 }
@@ -610,7 +623,8 @@ a.behance{
 
 
 .case-nav{
-    font-family: ProximaNova-Bold;
+    font-family: proxima-nova;
+    font-weight: 700;
     text-transform: uppercase;
     font-size: 1.25rem;
     letter-spacing: 0.125rem;
@@ -710,7 +724,8 @@ strong#p-title{
     margin-top: .75rem;
     width: 80%;
     font-style: italic;
-    font-family: ProximaNova-Regular;
+    font-family: proxima-nova;
+    font-weight: 400;
 }
 img#margin-top{
     margin-top: 1rem;
