--- a/styles.rem.css
+++ b/styles.rem.css
@@ -802,7 +802,7 @@ img.laptop{width: 100%;}
     .large .phone-screen{margin-left: -10.35rem !important; margin-top: 4.5rem !important;}
     .caption{width: 100%;}
     .laptop-image{display: flex; justify-content: center; align-items: center; position: relative;}
-    .screen{margin-top: .7rem !important; display: inherit; max-height: 9.5rem !important; padding-left: 0; margin-left: 2.25rem !important;}
+    .screen{margin-top: -.3rem; max-height: 9.5rem;}
     .screen img{margin-left: -.5rem; width: 121%;}
     img.laptop{width: 100%; min-height: inherit;}
     .laptop-image img {min-height: inherit;}
